# minecraft-weekend

./: CMakeLists.txt  Makefile  README.md
src/: main.c
src/cuda/: circles.cu  cuda-circles.h  cuda-utils.cu  cuda-utils.h  cuda-worldgen.h  hpc.c  hpc.h  worldgen.cu
src/cuda/noise/: cuda-noise.cu  cuda-noise.cuh  cuda-noise.h
src/entity/: c_position.c  ecs.h
src/gfx/: window.c
src/util/: fmath.h
src/world/: world.c  world.h
